--- a/index.html
+++ b/index.html
@@ -55,23 +55,21 @@
 					<p>26/05/1992</p>
 				</div>
 			</div>
-			<div class="hobbies">
-				<div class="row">
-					<div class="col-xs-12 col-sm-12" >
-						<h2>Hobbies</h2>
-					</div>
-					<div class="icons-hobbies  col-xs-3 col-sm-3 col-md-12">
-						<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="">
-					</div>
-					<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
-						<img class="hobbie-icon" src="img/bicycle.png" alt="">
-					</div>
-					<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
-						<img class="hobbie-icon" src="img/gamepad.png" alt="">
-					</div>
-					<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
-						<img class="hobbie-icon" src="img/map.png" alt="">
-					</div>
+			<div id="hobbies" class="row">
+				<div class="col-xs-12 col-sm-12" >
+					<h2>Hobbies</h2>
+				</div>
+				<div class="icons-hobbies  col-xs-3 col-sm-3 col-md-12">
+					<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="">
+				</div>
+				<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
+					<img class="hobbie-icon" src="img/bicycle.png" alt="">
+				</div>
+				<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
+					<img class="hobbie-icon" src="img/gamepad.png" alt="">
+				</div>
+				<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
+					<img class="hobbie-icon" src="img/map.png" alt="">
 				</div>
 			</div>
 		</div>
