--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div id="info">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12">
-					<img id="foto-principal" src="img/minha-foto2.jpg" alt="Foto de Lucas Scarpa" class="foto-principal" >
+					<img id="foto-principal" src="img/minha-foto.jpg" alt="Foto de Lucas Scarpa" class="foto-principal" >
 					<h1>Lucas Scarpa</h1>		
 					<h5>Engenheiro de Computação</h5>
 				</div>
@@ -59,24 +59,24 @@
 				<div class="col-xs-12 col-sm-12" >
 					<h2>Hobbies</h2>
 				</div>
-				<div class="icons-hobbies  col-xs-3 col-sm-3 col-md-12">
-					<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="">
+				<div  id="icon-cook"  class="icons-hobbies  col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="cozinhar" title="Cozinhar" >
 				</div>
-				<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
-					<img class="hobbie-icon" src="img/bicycle.png" alt="">
+				<div id="icon-bike" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img  class="hobbie-icon" src="img/bicycle.png" alt="Andar de Bike" title="Pedalar" >
 				</div>
-				<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
-					<img class="hobbie-icon" src="img/gamepad.png" alt="">
+				<div id="icon-game" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img  class="hobbie-icon" src="img/gamepad.png" alt="Jogar Videogame" title="Jogar videogame" >
 				</div>
-				<div class="icons-hobbies col-xs-3 col-sm-3 col-md-12">
-					<img class="hobbie-icon" src="img/map.png" alt="">
+				<div  id="icon-travel" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
+					<img class="hobbie-icon" src="img/map.png" alt="Viajar" title="Viajar" >
 				</div>
 			</div>
 		</div>
 	</div>
 </aside>
 <body>
-	<section id ="sobre" class="secao-corpo col-md-9 secao-ativa">
+	<section id ="sobre" class="secao-corpo col-md-9 .col-lg-6 secao-ativa">
 		
 		<h2>Sobre Mim</h2>
 		<p>Nascido e criado na praia</p>
@@ -86,7 +86,7 @@
 		<p>Fácil adaptação e trabalho em grupo.</p>
 
 	</section>
-	<section id="graduacao" class="secao-corpo col-md-9">
+	<section id="graduacao" class="secao-corpo col-md-9 .col-lg-6">
 		
 		<h2>Graduação</h2>
 		<h4>Engenharia da Computação</h4>
@@ -94,7 +94,7 @@
 		<p>Conhecimento e habilidades específicas no projeto e desenvolvimento e aplicação de sistemas informatizados, desde o estudo e especificação dos materiais, Gestão de TI, software e hardware, integrando-os nos equipamentos e serviços para os fins desejados.</p>
 		
 	</section>
-	<section id="cursos-complementares" class="secao-corpo col-md-9 ">
+	<section id="cursos-complementares" class="secao-corpo col-md-9 .col-lg-6 ">
 		
 		<h2>Cursos Complementares</h2>
 		<h4>SENAI Jul/12</h4>
@@ -108,7 +108,7 @@
 		<p>Curso voltado para certificação ITIL V# Foundation</p>
 		
 	</section>
-	<section id="experiencia-profissional" class="secao-corpo col-md-9 ">
+	<section id="experiencia-profissional" class="secao-corpo col-md-9 .col-lg-6 ">
 		
 		<h2>Experiência Profissional</h2>
 		<h4>Universidade Santa Cecília<br> Fev/11 - Dez/11</h4>    
