--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<div class="navbar-header">
 			<a class="rede-social" href="https://linkedin.com" target="_blank"><img src="img/linkedin.png" alt="Ícone perfil  de lucas scarpa no linkedin"></a>
 			<a class="rede-social"  href="https://facebook.com" target="_blank"><img src="img/facebook.png" alt="Ícone perfil de lucas scarpa no facebook"></a>
+			<a class="rede-social" href="https://doc-0s-0c-apps-viewer.googleusercontent.com/viewer/secure/pdf/nv4cvs9dnhqo70tip73evc1kvj4tik6t/0vpgjorughvsm1mdphm1d88jo4cb5f2o/1500646125000/drive/12424463081944643668/ACFrOgDNrDvIAcJtNCA3bEmuY9Ad48rAAbAPHBvXUx6JNRatr54J4g0bcMT3pbnto1fuQJ3k9VaplVMp-Hdd42AZfizq0k2Bkmc8ULX6kubFq25J34zUSyAlWSR8qw8=?print=true&nonce=ien26q02o0kem&user=12424463081944643668&hash=2ei5ujuladt9gkkc20g089srs1410jvs" target="_blank"><img src="img/print-button.png" alt="Imprimir versão reduzida do curriculum"></a>
+			<a class="rede-social" href="https://drive.google.com/open?id=0BwW1xP-R3GLlSGs5NExSTXIxN0E" target="_blank"><img src="img/cloud-computing.png" alt="Imprimir curriculum"></a>
 			
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navbar" aria-expanded="false">
 				<span class="sr-only">Toggle navigation</span>
@@ -23,10 +25,11 @@
 		</div>
 		<div class="collapse navbar-collapse" id="collapse-navbar">
 			<ul class="nav navbar-nav">
-				<li><a href="#graduacao">Graduação</a></li>
-				<li><a href="#cursos-complementares">Cursos Complementares</a></li>
-				<li><a href="#experiencia-profissional">Experiência Profissional</a></li>
-				<li><a href="#habilidades">Habilidades</a></li>
+				<li><a class="linkref" href="#sobre">Sobre</a></li>
+				<li><a class="linkref" href="#graduacao">Graduação</a></li>
+				<li><a class="linkref" href="#cursos-complementares">Cursos Complementares</a></li>
+				<li><a class="linkref" href="#experiencia-profissional">Experiência Profissional</a></li>
+				<li><a class="linkref" href="#habilidades">Habilidades</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -51,7 +54,7 @@
 				<div class="descricao-detalhe col-xs-7 col-sm-7">
 					<p>Lucas Abrunhoza Scarpa</p>
 					<p>(12) 98195-4656</p>
-					<p><a>lucasabrunhoza@gmail.com</a></p>
+					<p><a href="mailto: lucasabrunhoza@gmail.com">lucasabrunhoza@gmail.com</a></p>
 					<p>26/05/1992</p>
 				</div>
 			</div>
@@ -136,84 +139,85 @@
 		<p>Vivência em ambiente ágil com metodologia Scrum.</p>
 		
 	</section>
-	<section id ="habilidades" class="secao-corpo col-md-8">
-		
+	<section id ="habilidades" class="secao-corpo col-md-9 col-lg-9">
 		<h2>Habilidades</h2>
-		<section class="skills softwares">
-			<div class="container">
-				<h3>Softwares</h3>
-				<p>HTML5</p>
-				<div class="skillbar clearfix " data-percent="25%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">25%</div>
-				</div>
-				<p>CSS3</p>
-				<div class="skillbar clearfix " data-percent="22%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">22%</div>
-				</div>
-				<p>JavaScript</p>
-				<div class="skillbar clearfix " data-percent="20%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">20%</div>
-				</div>
-				<p>SQL</p>
-				<div class="skillbar clearfix " data-percent="40%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">40%</div>
-				</div>
-				<p>ITIL</p>
-				<div class="skillbar clearfix " data-percent="50%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">50%</div>
-				</div>      
-			</div>            
-		</section>
-		<section class="sistemas skills">
-			<div class="container">
-				<h3>Sistemas</h3>
-				<p>Windows</p>
-				<div class="skillbar clearfix " data-percent="70%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">70%</div>
-				</div>
-				<p>Linux</p>
-				<div class="skillbar clearfix " data-percent="40%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">40%</div>
-				</div>
-			</div>
-		</section>
-		<section class="language skills">
-			<div class="container">
-				<h3>Idiomas</h3>
-				<p>Inglês</p>
-				<div class="skillbar clearfix " data-percent="60%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">60%</div>
-				</div>
-				<p>Espanhol</p>
-				<div class="skillbar clearfix " data-percent="22%">
-					<div class="skillbar-title" style="background: #333333;"></div>
-					<div class="skillbar-bar" style="background: darkblue;"></div>
-					<div class="skill-bar-percent">22%</div>
-				</div>
-			</div>
-		</section>
+		<div class="row">
+			
+				<section class="skills softwares col-md-4 col-lg-4">
+					<h3>Softwares</h3>
+					<p>HTML5</p>
+					<div class="skillbar clearfix " data-percent="25%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">25%</div>
+					</div>
+					<p>CSS3</p>
+					<div class="skillbar clearfix " data-percent="22%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">22%</div>
+					</div>
+					<p>JavaScript</p>
+					<div class="skillbar clearfix " data-percent="20%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">20%</div>
+					</div>
+					<p>SQL</p>
+					<div class="skillbar clearfix " data-percent="40%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">40%</div>
+					</div>
+					<p>ITIL</p>
+					<div class="skillbar clearfix " data-percent="50%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">50%</div>
+					</div>  
+				</section>
+			         
+			
+				<section class="sistemas skills col-md-4 col-lg-4">
+					<h3>Sistemas</h3>
+					<p>Windows</p>
+					<div class="skillbar clearfix " data-percent="70%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">70%</div>
+					</div>
+					<p>Linux</p>
+					<div class="skillbar clearfix " data-percent="40%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">40%</div>
+					</div>
+				</section>
+
+			
+				<section class="language skills col-md-4 col-lg-4">
+					<h3>Idiomas</h3>
+					<p>Inglês</p>
+					<div class="skillbar clearfix " data-percent="60%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">60%</div>
+					</div>
+					<p>Espanhol</p>
+					<div class="skillbar clearfix " data-percent="22%">
+						<div class="skillbar-title" style="background: #333333;"></div>
+						<div class="skillbar-bar" style="background: darkblue;"></div>
+						<div class="skill-bar-percent">22%</div>
+					</div>
+				</section>
 		
+		</div>
 	</section>
 
 	<script src="assets/jquery/jquery-3.2.1.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/skillbar.js"></script>
 	<script src="js/menu-fix.js"></script>
+	<script src="js/ativa-sessao.js"></script>
 </body>
 </html>
