--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <header>
 	<nav class="navbar navbar-default">
 		<div class="navbar-header">
-			<a class="rede-social" href="https://linkedin.com" target="_blank"><img src="img/linkedin.png" alt="Ícone perfil  de lucas scarpa no linkedin"></a>
-			<a class="rede-social"  href="https://facebook.com" target="_blank"><img src="img/facebook.png" alt="Ícone perfil de lucas scarpa no facebook"></a>
-			<a class="rede-social" href="https://doc-0s-0c-apps-viewer.googleusercontent.com/viewer/secure/pdf/nv4cvs9dnhqo70tip73evc1kvj4tik6t/0vpgjorughvsm1mdphm1d88jo4cb5f2o/1500646125000/drive/12424463081944643668/ACFrOgDNrDvIAcJtNCA3bEmuY9Ad48rAAbAPHBvXUx6JNRatr54J4g0bcMT3pbnto1fuQJ3k9VaplVMp-Hdd42AZfizq0k2Bkmc8ULX6kubFq25J34zUSyAlWSR8qw8=?print=true&nonce=ien26q02o0kem&user=12424463081944643668&hash=2ei5ujuladt9gkkc20g089srs1410jvs" target="_blank"><img src="img/print-button.png" alt="Imprimir versão reduzida do curriculum"></a>
-			<a class="rede-social" href="https://drive.google.com/open?id=0BwW1xP-R3GLlSGs5NExSTXIxN0E" target="_blank"><img src="img/cloud-computing.png" alt="Imprimir curriculum"></a>
+			<a class="rede-social" href="https://linkedin.com" target="_blank" title="Perfil Linkedin"><img src="img/linkedin.png" alt="Ícone perfil  de lucas scarpa no linkedin"></a>
+			<a class="rede-social"  href="https://facebook.com" target="_blank" title="Perfil Facebook"><img src="img/facebook.png" alt="Ícone perfil de lucas scarpa no facebook"></a>
+			<a class="rede-social" href="https://doc-0s-0c-apps-viewer.googleusercontent.com/viewer/secure/pdf/nv4cvs9dnhqo70tip73evc1kvj4tik6t/0vpgjorughvsm1mdphm1d88jo4cb5f2o/1500646125000/drive/12424463081944643668/ACFrOgDNrDvIAcJtNCA3bEmuY9Ad48rAAbAPHBvXUx6JNRatr54J4g0bcMT3pbnto1fuQJ3k9VaplVMp-Hdd42AZfizq0k2Bkmc8ULX6kubFq25J34zUSyAlWSR8qw8=?print=true&nonce=ien26q02o0kem&user=12424463081944643668&hash=2ei5ujuladt9gkkc20g089srs1410jvs" title="Imprimir" target="_blank"><img src="img/print-button.png" alt="Imprimir versão reduzida do curriculum"></a>
+			<a class="rede-social" href="https://drive.google.com/open?id=0BwW1xP-R3GLlSGs5NExSTXIxN0E" target="_blank" title="Download"><img src="img/cloud-computing.png" alt="Imprimir curriculum"></a>
 			
 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navbar" aria-expanded="false">
 				<span class="sr-only">Toggle navigation</span>
