--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 		</div>
 		<div class="collapse navbar-collapse" id="collapse-navbar">
 			<ul class="nav navbar-nav">
-				<li><a class="linkref" href="#sobre">Sobre</a></li>
+				<li><a class="linkref botao-ativo" href="#objetivo">Objetivo</a></li>
 				<li><a class="linkref" href="#graduacao">Graduação</a></li>
-				<li><a class="linkref" href="#cursos-complementares">Cursos Complementares</a></li>
-				<li><a class="linkref" href="#experiencia-profissional">Experiência Profissional</a></li>
+				<li><a class="linkref" href="#cursos-complementares">Cursos</a></li>
+				<li><a class="linkref" href="#experiencia-profissional">Experiências</a></li>
 				<li><a class="linkref" href="#habilidades">Habilidades</a></li>
 			</ul>
 		</div>
@@ -79,17 +79,13 @@
 	</div>
 </aside>
 <body>
-	<section id ="sobre" class="secao-corpo col-md-9 .col-lg-6 secao-ativa">
-		
-		<h2>Sobre Mim</h2>
-		<p>Nascido e criado na praia</p>
-		<p>Recém apaixonado por Front-End</p>
+	<section id ="objetivo" class="secao-corpo col-md-7 col-lg-8 secao-ativa">
 		<h2>Objetivo Profissional</h2>
 		<p>Trabalhar em uma empresa onde possa colocar em prática meus conhecimentos e o desejo de aprender e dedicar-me à função, visando sempre o compromisso, responsabilidade e honestidade com clientes e colegas de trabalho. Podendo assim adquirir cada vez mais conhecimento e experiência no setor de TI.</p>
 		<p>Fácil adaptação e trabalho em grupo.</p>
 
 	</section>
-	<section id="graduacao" class="secao-corpo col-md-9 .col-lg-6">
+	<section id="graduacao" class="secao-corpo col-md-7 col-lg-8">
 		
 		<h2>Graduação</h2>
 		<h4>Engenharia da Computação</h4>
@@ -97,7 +93,7 @@
 		<p>Conhecimento e habilidades específicas no projeto e desenvolvimento e aplicação de sistemas informatizados, desde o estudo e especificação dos materiais, Gestão de TI, software e hardware, integrando-os nos equipamentos e serviços para os fins desejados.</p>
 		
 	</section>
-	<section id="cursos-complementares" class="secao-corpo col-md-9 .col-lg-6 ">
+	<section id="cursos-complementares" class="secao-corpo col-md-7 col-lg-8 ">
 		
 		<h2>Cursos Complementares</h2>
 		<h4>SENAI Jul/12</h4>
@@ -111,7 +107,7 @@
 		<p>Curso voltado para certificação ITIL V# Foundation</p>
 		
 	</section>
-	<section id="experiencia-profissional" class="secao-corpo col-md-9 .col-lg-6 ">
+	<section id="experiencia-profissional" class="secao-corpo col-md-7 col-lg-8 ">
 		
 		<h2>Experiência Profissional</h2>
 		<h4>Universidade Santa Cecília<br> Fev/11 - Dez/11</h4>    
@@ -139,7 +135,7 @@
 		<p>Vivência em ambiente ágil com metodologia Scrum.</p>
 		
 	</section>
-	<section id ="habilidades" class="secao-corpo col-md-9 col-lg-9">
+	<section id ="habilidades" class="secao-corpo col-md-7 col-lg-8">
 		<h2>Habilidades</h2>
 		<div class="row">
 			
