--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 					<h5>Engenheiro de Computação</h5>
 				</div>
 			</div>
-			<div class="row">
-				<div class="descricao-detalhe col-xs-5 col-sm-5">
+			<div class="row descricao-detalhe">
+				<div class="detalhe-titulo col-xs-5 col-sm-5">
 					<p>Nome completo:</p>
 					<p>Telefone:</p>
 					<p>E-mail:</p>
 					<p>Data Nascimento:</p>
 				</div>
-				<div class="descricao-detalhe col-xs-7 col-sm-7">
+				<div class="detalhe-descricao col-xs-7 col-sm-7">
 					<p>Lucas Abrunhoza Scarpa</p>
 					<p>(12) 98195-4656</p>
 					<p><a href="mailto: lucasabrunhoza@gmail.com">lucasabrunhoza@gmail.com</a></p>
@@ -62,6 +62,8 @@
 				<div class="col-xs-12 col-sm-12" >
 					<h2>Hobbies</h2>
 				</div>
+			</div>
+			<div class="row">
 				<div  id="icon-cook"  class="icons-hobbies  col-xs-3 col-sm-3 col-md-3 col-lg-3">
 					<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="cozinhar" title="Cozinhar" >
 				</div>
@@ -79,13 +81,13 @@
 	</div>
 </aside>
 <body>
-	<section id ="objetivo" class="secao-corpo col-md-7 col-lg-8 secao-ativa">
+	<section id ="objetivo" class="secao-corpo col-md-8 col-lg-8 secao-ativa">
 		<h2>Objetivo Profissional</h2>
 		<p>Trabalhar em uma empresa onde possa colocar em prática meus conhecimentos e o desejo de aprender e dedicar-me à função, visando sempre o compromisso, responsabilidade e honestidade com clientes e colegas de trabalho. Podendo assim adquirir cada vez mais conhecimento e experiência no setor de TI.</p>
 		<p>Fácil adaptação e trabalho em grupo.</p>
 
 	</section>
-	<section id="graduacao" class="secao-corpo col-md-7 col-lg-8">
+	<section id="graduacao" class="secao-corpo col-md-8 col-lg-8">
 		
 		<h2>Graduação</h2>
 		<h4>Engenharia da Computação</h4>
@@ -93,7 +95,7 @@
 		<p>Conhecimento e habilidades específicas no projeto e desenvolvimento e aplicação de sistemas informatizados, desde o estudo e especificação dos materiais, Gestão de TI, software e hardware, integrando-os nos equipamentos e serviços para os fins desejados.</p>
 		
 	</section>
-	<section id="cursos-complementares" class="secao-corpo col-md-7 col-lg-8 ">
+	<section id="cursos-complementares" class="secao-corpo col-md-8 col-lg-8 ">
 		
 		<h2>Cursos Complementares</h2>
 		<h4>SENAI Jul/12</h4>
@@ -107,106 +109,104 @@
 		<p>Curso voltado para certificação ITIL V# Foundation</p>
 		
 	</section>
-	<section id="experiencia-profissional" class="secao-corpo col-md-7 col-lg-8 ">
+	<section id="experiencia-profissional" class="secao-corpo col-md-8 col-lg-8 ">
 		
 		<h2>Experiência Profissional</h2>
-		<h4>Universidade Santa Cecília<br> Fev/11 - Dez/11</h4>    
+		<h4><span>Estagiário - </span> Universidade Santa Cecília</h4>    
+		<h5> Fev/11 - Dez/11</h5>
 		<h5>Santos-SP</h5>
-		<h5>Estagiário</h5>
-		<p>Monitoramento do laboratório de eletrônica com a responsabilidade de manter o perfeito funcionamento dos equipamentos e dar auxílio aos alunos para realização de projetos na área de eletrônica.</p>
-
-		<h4>Prefeitura Municipal de Santos<br>Abr/12 - Abr/14</h4>   
+		<p>Monitoramento do laboratório de eletrônica com a responsabilidade de manter o perfeito funcionamento dos equipamentos e dar auxílio
+		 aos alunos para realização de projetos na área de eletrônica.</p>
+		
+		<h4><span>Estagiário - </span> Prefeitura Municipal de Santos</h4>   
+		<h5>Abr/12 - Abr/14</h5>
 		<h5>Santos-SP</h5>
-		<h5>Estagiário</h5>
 		<p>Responsável pelo correto funcionamento de todos equipamentos da Secretaria de Desenvolvimento Urbano.</p>
 		<p>Participação no desenvolvimento de projetos críticos de mudança, instalação e otimização da rede.</p>
 		<p>Gerenciamento de estoque de equipamentos.</p>
 		<p>Elaboração de documentos, procedimentos e levantamento de informações para análise.</p>
 
-		<h4>Restaurante Frida<br> Out/15 - Abr/17</h4>  
+		<h4><span>Proprietário - </span> Restaurante Frida</h4>  
+		<h5> Out/15 - Abr/17</h5>
 		<h5>São Sebastião-SP</h5>
-		<h5>Proprietário</h5>
+		
 		<p>Responsável por toda a área administrativa relacionada à contratação de funcionários, folha de pagamento, contagem de estoque, compras e contato com fornecedores. Site do restaurante: <a href="http://restaurantefridabar.com.br" target="_blank">www.restaurantefridabar.com.br</a>.</p>
-		<h4>Autodoc Tecnologia<br> Maio/17 </h4>    
+		<h4><span>Tecnico em Documentação -</span> Autodoc Tecnologia</h4>    
+		<h5> Maio/17</h5> 
 		<h5>São Sebastião-SP</h5>
-		<h5 >Proprietário</h5>
+		
 		<p>Realização da documentação técnica dos softwares e levantamento de requisitos funcionais e não funcionais.</p>
 		<p>Elaboração de manuais de uso para usuários finais e informativos.</p>
 		<p>Vivência em ambiente ágil com metodologia Scrum.</p>
 		
 	</section>
-	<section id ="habilidades" class="secao-corpo col-md-7 col-lg-8">
+	<section id ="habilidades" class="secao-corpo col-md-8 col-lg-8">
 		<h2>Habilidades</h2>
 		<div class="row">
-			
-				<section class="skills softwares col-md-4 col-lg-4">
-					<h3>Softwares</h3>
-					<p>HTML5</p>
-					<div class="skillbar clearfix " data-percent="25%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">25%</div>
+			<section class="skills softwares col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				<h3>Softwares</h3>
+				<p>HTML5</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
 					</div>
-					<p>CSS3</p>
-					<div class="skillbar clearfix " data-percent="22%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">22%</div>
+				</div>
+				<p>CSS3</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
 					</div>
-					<p>JavaScript</p>
-					<div class="skillbar clearfix " data-percent="20%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">20%</div>
+				</div>
+				<p>JavaScript</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
 					</div>
-					<p>SQL</p>
-					<div class="skillbar clearfix " data-percent="40%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">40%</div>
+				</div>
+				<p>SQL</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
 					</div>
-					<p>ITIL</p>
-					<div class="skillbar clearfix " data-percent="50%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">50%</div>
-					</div>  
-				</section>
-			         
-			
-				<section class="sistemas skills col-md-4 col-lg-4">
-					<h3>Sistemas</h3>
-					<p>Windows</p>
-					<div class="skillbar clearfix " data-percent="70%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">70%</div>
-					</div>
-					<p>Linux</p>
-					<div class="skillbar clearfix " data-percent="40%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">40%</div>
-					</div>
-				</section>
+				</div>
 
-			
-				<section class="language skills col-md-4 col-lg-4">
-					<h3>Idiomas</h3>
-					<p>Inglês</p>
-					<div class="skillbar clearfix " data-percent="60%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">60%</div>
+				<p>ITIL</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
 					</div>
-					<p>Espanhol</p>
-					<div class="skillbar clearfix " data-percent="22%">
-						<div class="skillbar-title" style="background: #333333;"></div>
-						<div class="skillbar-bar" style="background: darkblue;"></div>
-						<div class="skill-bar-percent">22%</div>
+				</div>
+			</section>
+			<section id="bar-sistemas" class="skills col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				<h3>Sistemas</h3>
+				<p>Windows</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
 					</div>
-				</section>
-		
+				</div>
+				<p>Linux</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
+					</div>
+				</div>
+			</section>
+			<section class="language skills  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				<h3>Idiomas</h3>
+				<p>Inglês</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
+					</div>
+				</div>
+				<p>Espanhol</p>
+				<div class="progress">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+						<span class="sr-only">45% Complete</span>
+					</div>
+				</div>
+			</section>
 		</div>
 	</section>
 
