--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<nav class="navbar navbar-default">
 		<div class="navbar-header">
 			<a class="rede-social" href="https://linkedin.com" target="_blank" title="Perfil Linkedin"><img src="img/linkedin.png" alt="Ícone perfil  de lucas scarpa no linkedin"></a>
-			<a class="rede-social"  href="https://facebook.com" target="_blank" title="Perfil Facebook"><img src="img/facebook.png" alt="Ícone perfil de lucas scarpa no facebook"></a>
+			<a class="rede-social"  href="https://facebook.com" target="_blank" title="Perfil Facebook"><img src="img/facebook2.png" alt="Ícone perfil de lucas scarpa no facebook"></a>
 			<a class="rede-social" href="https://doc-0s-0c-apps-viewer.googleusercontent.com/viewer/secure/pdf/nv4cvs9dnhqo70tip73evc1kvj4tik6t/0vpgjorughvsm1mdphm1d88jo4cb5f2o/1500646125000/drive/12424463081944643668/ACFrOgDNrDvIAcJtNCA3bEmuY9Ad48rAAbAPHBvXUx6JNRatr54J4g0bcMT3pbnto1fuQJ3k9VaplVMp-Hdd42AZfizq0k2Bkmc8ULX6kubFq25J34zUSyAlWSR8qw8=?print=true&nonce=ien26q02o0kem&user=12424463081944643668&hash=2ei5ujuladt9gkkc20g089srs1410jvs" title="Imprimir" target="_blank"><img src="img/print-button.png" alt="Imprimir versão reduzida do curriculum"></a>
 			<a class="rede-social" href="https://drive.google.com/open?id=0BwW1xP-R3GLlSGs5NExSTXIxN0E" target="_blank" title="Download"><img src="img/cloud-computing.png" alt="Imprimir curriculum"></a>
 			
@@ -58,12 +58,12 @@
 					<p>26/05/1992</p>
 				</div>
 			</div>
-			<div id="hobbies" class="row">
+			<div id="titulo-hobbies" class="row secao-hobbies">
 				<div class="col-xs-12 col-sm-12" >
 					<h2>Hobbies</h2>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row secao-hobbies">
 				<div  id="icon-cook"  class="icons-hobbies  col-xs-3 col-sm-3 col-md-3 col-lg-3">
 					<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="cozinhar" title="Cozinhar" >
 				</div>
@@ -146,8 +146,9 @@
 			<section class="skills softwares col-xs-12 col-sm-4 col-md-4 col-lg-4">
 				<h3>Softwares</h3>
 				<p>HTML5</p>
+
 				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%" >
 						<span class="sr-only">45% Complete</span>
 					</div>
 				</div>
@@ -177,7 +178,7 @@
 					</div>
 				</div>
 			</section>
-			<section id="bar-sistemas" class="skills col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<section class="skills col-xs-12 col-sm-4 col-md-4 col-lg-4">
 				<h3>Sistemas</h3>
 				<p>Windows</p>
 				<div class="progress">
@@ -212,7 +213,6 @@
 
 	<script src="assets/jquery/jquery-3.2.1.min.js"></script>
 	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="js/skillbar.js"></script>
 	<script src="js/menu-fix.js"></script>
 	<script src="js/ativa-sessao.js"></script>
 </body>
