--- a/index.html
+++ b/index.html
@@ -40,38 +40,40 @@
 				</div>
 			</div>
 			<div class="row descricao-detalhe">
-				<div class="detalhe-titulo col-xs-5 col-sm-5">
+				<div class="detalhes detalhe-titulo col-xs-5 col-sm-5">
 					<p>Nome completo:</p>
 					<p>Telefone:</p>
 					<p>E-mail:</p>
 					<p>Data Nascimento:</p>
 				</div>
-				<div class="detalhe-descricao col-xs-7 col-sm-7">
+				<div class="detalhes detalhe-descricao col-xs-7 col-sm-7">
 					<p>Lucas Abrunhoza Scarpa</p>
 					<p id="telefone">(12) 98195-4656</p>
 					<p><a href="mailto: lucasabrunhoza@gmail.com">lucasabrunhoza@gmail.com</a></p>
 					<p>26/05/1992</p>
 				</div>
 			</div>
-			<div id="titulo-hobbies" class="row secao-hobbies">
-				<div class="col-xs-12 col-sm-12" >
-					<h2>Hobbies</h2>
+			<section id="hobbies">
+				<div id="titulo-hobbies" class="row secao-hobbies">
+					<div class="col-xs-12 col-sm-12" >
+						<h2>Hobbies</h2>
+					</div>
 				</div>
-			</div>
-			<div class="row secao-hobbies">
-				<div  id="icon-cook"  class="icons-hobbies  col-xs-3 col-sm-3 col-md-3 col-lg-3">
-					<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="cozinhar" title="Cozinhar" >
+				<div class="row secao-hobbies">
+					<div  id="icon-cook"  class="icons-hobbies  col-xs-3 col-sm-3 col-md-3 col-lg-3">
+						<img class="hobbie-icon hobbie-ativo" src="img/chef.png" alt="cozinhar" title="Cozinhar" >
+					</div>
+					<div id="icon-bike" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
+						<img  class="hobbie-icon" src="img/bicycle.png" alt="Andar de Bike" title="Pedalar" >
+					</div>
+					<div id="icon-game" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
+						<img  class="hobbie-icon" src="img/gamepad.png" alt="Jogar Videogame" title="Jogar videogame" >
+					</div>
+					<div  id="icon-travel" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
+						<img class="hobbie-icon" src="img/map.png" alt="Viajar" title="Viajar" >
+					</div>
 				</div>
-				<div id="icon-bike" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
-					<img  class="hobbie-icon" src="img/bicycle.png" alt="Andar de Bike" title="Pedalar" >
-				</div>
-				<div id="icon-game" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
-					<img  class="hobbie-icon" src="img/gamepad.png" alt="Jogar Videogame" title="Jogar videogame" >
-				</div>
-				<div  id="icon-travel" class="icons-hobbies col-xs-3 col-sm-3 col-md-3 col-lg-3">
-					<img class="hobbie-icon" src="img/map.png" alt="Viajar" title="Viajar" >
-				</div>
-			</div>
+			</section>
 		</div>
 	</div>
 </aside>
@@ -110,110 +112,110 @@
 		<h5> Fevereiro/11 - Dezembro/11</h5>
 		<h5>Santos-SP</h5>
 		<p>Monitoramento do laboratório de eletrônica com a responsabilidade de manter o perfeito funcionamento dos equipamentos e dar auxílio
-		 aos alunos para realização de projetos na área de eletrônica.</p>
-		
-		<h4><span>Estagiário - </span> Prefeitura Municipal de Santos</h4>   
-		<h5>Abril/12 - Abril/14</h5>
-		<h5>Santos-SP</h5>
-		<p>Responsável pelo correto funcionamento de todos equipamentos da Secretaria de Desenvolvimento Urbano.</p>
-		<p>Participação no desenvolvimento de projetos críticos de mudança, instalação e otimização da rede.</p>
-		<p>Gerenciamento de estoque de equipamentos.</p>
-		<p>Elaboração de documentos, procedimentos e levantamento de informações para análise.</p>
+			aos alunos para realização de projetos na área de eletrônica.</p>
 
-		<h4><span>Proprietário - </span> Restaurante Frida</h4>  
-		<h5> Outubro/15 - Abril/17</h5>
-		<h5>São Sebastião-SP</h5>
-		
-		<p>Responsável por toda a área administrativa relacionada à contratação de funcionários, folha de pagamento, contagem de estoque, compras e contato com fornecedores. Site do restaurante: <a href="http://restaurantefridabar.com.br" target="_blank">www.restaurantefridabar.com.br</a>.</p>
-		<h4><span>Tecnico em Documentação -</span> Autodoc Tecnologia</h4>    
-		<h5> Maio/17</h5> 
-		<h5>São Sebastião-SP</h5>
-		
-		<p>Realização da documentação técnica dos softwares e levantamento de requisitos funcionais e não funcionais.</p>
-		<p>Elaboração de manuais de uso para usuários finais e informativos.</p>
-		<p>Vivência em ambiente ágil com metodologia Scrum.</p>
-		
-	</section>
-	<section id ="habilidades" class="secao-corpo col-md-8 col-lg-8">
-		<h2>Habilidades</h2>
-		<div class="row">
-			<section class="skills softwares col-xs-12 col-sm-4 col-md-4 col-lg-4">
-				<h3>Softwares</h3>
-				<p>HTML5</p>
+			<h4><span>Estagiário - </span> Prefeitura Municipal de Santos</h4>   
+			<h5>Abril/12 - Abril/14</h5>
+			<h5>Santos-SP</h5>
+			<p>Responsável pelo correto funcionamento de todos equipamentos da Secretaria de Desenvolvimento Urbano.</p>
+			<p>Participação no desenvolvimento de projetos críticos de mudança, instalação e otimização da rede.</p>
+			<p>Gerenciamento de estoque de equipamentos.</p>
+			<p>Elaboração de documentos, procedimentos e levantamento de informações para análise.</p>
 
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%" >
-						<span class="sr-only"></span>
-					</div>
-				</div>
-				<p>CSS3</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-				<p>JavaScript</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-				<p>SQL</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
+			<h4><span>Proprietário - </span> Restaurante Frida</h4>  
+			<h5> Outubro/15 - Abril/17</h5>
+			<h5>São Sebastião-SP</h5>
 
-				<p>ITIL</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-			</section>
-			<section class="skills col-xs-12 col-sm-4 col-md-4 col-lg-4">
-				<h3>Sistemas</h3>
-				<p>Windows</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-				<p>Linux</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-			</section>
-			<section class="language skills  col-xs-12 col-sm-4 col-md-4 col-lg-4">
-				<h3>Idiomas</h3>
-				<p>Português</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-				<p>Inglês</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-				<p>Espanhol</p>
-				<div class="progress">
-					<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-						<span class="sr-only"></span>
-					</div>
-				</div>
-			</section>
-		</div>
-	</section>
+			<p>Responsável por toda a área administrativa relacionada à contratação de funcionários, folha de pagamento, contagem de estoque, compras e contato com fornecedores. Site do restaurante: <a href="http://restaurantefridabar.com.br" target="_blank">www.restaurantefridabar.com.br</a>.</p>
+			<h4><span>Tecnico em Documentação -</span> Autodoc Tecnologia</h4>    
+			<h5> Maio/17</h5> 
+			<h5>São Sebastião-SP</h5>
 
-	<script src="assets/jquery/jquery-3.2.1.min.js"></script>
-	<script src="assets/bootstrap/js/bootstrap.min.js"></script>
-	<script src="js/menu-mobile.js"></script>
-	<script src="js/btn-sessao.js"></script>
-</body>
-</html>
+			<p>Realização da documentação técnica dos softwares e levantamento de requisitos funcionais e não funcionais.</p>
+			<p>Elaboração de manuais de uso para usuários finais e informativos.</p>
+			<p>Vivência em ambiente ágil com metodologia Scrum.</p>
+
+		</section>
+		<section id ="habilidades" class="secao-corpo col-md-8 col-lg-8">
+			<h2>Habilidades</h2>
+			<div class="row">
+				<section class="skills softwares col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<h3>Softwares</h3>
+					<p>HTML5</p>
+
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 70%" >
+							<span class="sr-only"></span>
+						</div>
+					</div>
+					<p>CSS3</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+					<p>JavaScript</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 25%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+					<p>SQL</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+
+					<p>ITIL</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+				</section>
+				<section class="skills col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<h3>Sistemas</h3>
+					<p>Windows</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+					<p>Linux</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+				</section>
+				<section class="language skills  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+					<h3>Idiomas</h3>
+					<p>Português</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+					<p>Inglês</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+					<p>Espanhol</p>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+							<span class="sr-only"></span>
+						</div>
+					</div>
+				</section>
+			</div>
+		</section>
+
+		<script src="assets/jquery/jquery-3.2.1.min.js"></script>
+		<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+		<script src="js/menu-mobile.js"></script>
+		<script src="js/btn-sessao.js"></script>
+	</body>
+	</html>
