--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 </aside>
 <body>
 	<section id ="objetivo" class="secao-corpo col-md-8 col-lg-8 secao-ativa">
+		<h2>Sobre mim</h2>
+		<p>Apaixonado por tecnologia, dedicado e proativo sempre mantenho um bom relacionamento com os companheiros de equipe. Por ser curioso, dedico meus dias para absorver o máximo de informações possível para assim, ampliar meu conhecimento na área de desenvolvimento de sistemas. Possuo um bom conhecimento em áreas distintas como redes, banco de dados e gestão de projetos.</p>
 		<h2>Objetivo Profissional</h2>
 		<p>Trabalhar em uma empresa onde possa colocar em prática meus conhecimentos e o desejo de aprender e dedicar-me à função, visando sempre o compromisso, responsabilidade e honestidade com clientes e colegas de trabalho. Podendo assim adquirir cada vez mais conhecimento e experiência no setor de TI.</p>
-		<p>Fácil adaptação e trabalho em grupo.</p>
-
 	</section>
 	<section id="formacao" class="secao-corpo col-md-8 col-lg-8">
 		
