--- a/index.html
+++ b/index.html
@@ -79,13 +79,22 @@
 </aside>
 <body>
 	<section id ="objetivo" class="secao-corpo col-md-8 col-lg-8 secao-ativa">
+			<!-- CITACAO
+	<blockquote class="blockquote-reverse">
+		<p>“Inteligência é a capacidade de se adaptar à mudança. ”</p>
+		<footer>Stephen Hawking</footer>
+	</blockquote>
+			-->
 		<h2>Sobre mim</h2>
-		<p>Apaixonado por tecnologia, dedicado e proativo sempre mantenho um bom relacionamento com os companheiros de equipe. Por ser curioso, dedico meus dias para absorver o máximo de informações possível para assim, ampliar meu conhecimento na área de desenvolvimento de sistemas. Possuo um bom conhecimento em áreas distintas como redes, banco de dados e gestão de projetos.</p>
+		<p>Apaixonado por gastronomia, viagens, jogos e tecnologia, nascido e criado na praia possuo uma forte ligação com assuntos socioambientais. Dedicado, curioso e proativo, mantenho um bom relacionamento com as pessoas ao meu redor e companheiros de equipe.</p>
+		<p> Dedico meus dias para absorver o máximo de informação possível para assim, ampliar meu conhecimento na área de Tecnologia de Informação e ajudar minha equipe.</p>
+		<p>Possuo um bom conhecimento em áreas distintas como desenvolvimento de sistemas web, redes, banco de dados e gestão de projetos. </p>
+		<p>Fácil adaptação à mudanças e trabalhos em grupo, estou aberto a necessidade de viagens pela empresa.</p>
 		<h2>Objetivo Profissional</h2>
-		<p>Trabalhar em uma empresa onde possa colocar em prática meus conhecimentos e o desejo de aprender e dedicar-me à função, visando sempre o compromisso, responsabilidade e honestidade com clientes e colegas de trabalho. Podendo assim adquirir cada vez mais conhecimento e experiência no setor de TI.</p>
+		<p>Trabalhar em uma empresa onde eu tenha possibilidade de crescimento e possa colocar em prática meus conhecimentos melhor ainda se houver a possibilidade de experiência internacional</p>
 	</section>
 	<section id="formacao" class="secao-corpo col-md-8 col-lg-8">
-		
+
 		<h2>Graduação</h2>
 		<h4>Engenharia da Computação</h4>
 		<h5>Universidade Santa Cecília Jan/10 - Dez/14</h5>
@@ -101,12 +110,12 @@
 		<h4>TIexames Jan/16</h4>
 		<h5>ITIL V3</h5>
 		<p>Curso voltado para certificação ITIL V3 Foundation</p>
-		
 
-		
+
+
 	</section>
 	<section id="experiencia-profissional" class="secao-corpo col-md-8 col-lg-8 ">
-		
+
 		<h2>Experiência Profissional</h2>
 		<h4><span>Estagiário - </span> Universidade Santa Cecília</h4>    
 		<h5> Fevereiro/11 - Dezembro/11</h5>
