--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div id="info">
 			<div class="row">
 				<div class="col-xs-12 col-sm-12">
-					<img id="foto-principal" src="img/minha-foto.jpg" alt="Foto de Lucas Scarpa" class="foto-principal" >
+					<img id="foto-principal" src="img/minha-foto2.jpg" alt="Foto de Lucas Scarpa" class="foto-principal" >
 					<h1>Lucas Scarpa</h1>		
 					<h5>Engenheiro de Computação</h5>
 				</div>
